--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ function showSlides(n, no) {
 <div class="info">
 
 	<div class="text-1">
-		This website serves as the MFA Candidacy Proposal for Lihua Yu, including <a href="index.html" class="one" >selected projects</a> she had done in the first year of the program, <a href="http://lihuayu.xyz/invitation/candidacy-book.pdf" class="one" target="_blank" >a book</a> of her writing, and an<a href="img/map.pdf" class="one" target="_blank" > unfinished map</a>. There are some <a href="" class="one"  >*</a> in the caption, you can click to know more about the story behind the works, but it’s ok if you missed it.
+		This website serves as a Candidacy Proposal, including <a href="index.html" class="one" >selected projects</a> she had done in the first year of the program, <a href="http://lihuayu.xyz/invitation/candidacy-book.pdf" class="one" target="_blank" >a book</a> of her writing, and an<a href="img/map.pdf" class="one" target="_blank" > unfinished map</a>. There are some <a href="" class="one"  >*</a> in the caption, you can click to know more about the story behind the works, but it’s ok if you missed it.
 	</div>
 
 
