--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 </div>
 </div>
 
-<p class="text"><a href="https://simplelivin.faith/" class="one" target="_blank" ><i>Simple Livin’</i></a>, group show website, collaborated with Aidan Quinlan, December, 2019.</p>
+<p class="text"><a href="https://aidanquinlan.net/simplelivin/" class="one" target="_blank" ><i>Simple Livin’</i></a>, group show website, collaborated with Aidan Quinlan, December, 2019.</p>
 
 
 <div class="slideshow-container">
