--- a/index.html
+++ b/index.html
@@ -212,6 +212,26 @@
 
 	</p>
 
+	<div class="slideshow-container">
+		<div class="mySlides21">
+			<img src="img/bc.png" style="width:60%">
+			<div class="numbertext">1 / 1</div>
+		</div>
+
+		<div class="b-21">
+			<a class="prev" onclick="plusSlides(-1, 20)">&#10094;</a>
+			<a class="next" onclick="plusSlides(1, 20)">&#10095;</a>
+		</div>
+
+	</div>
+
+	<p class="text">
+		Birthday Cake, <a href="https://lihuayu.xyz/happybirthday/" target="_blank">digital gift</a>, June, 2020.
+		<br>
+		Happy Birthday!
+
+	</p>
+
 	<!-- web -->
 
 
@@ -902,9 +922,9 @@
 
 
 	<script>
-		var slideIndex = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1];
+		var slideIndex = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,1];
 		var slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5", "mySlides6", "mySlides7", "mySlides8", "mySlides9", "mySlides10", "mySlides11", "mySlides12", "mySlides13", "mySlides14", "mySlides15", "mySlides16", "mySlides17",
-			"mySlides18", "mySlides19", "mySlides20"
+			"mySlides18", "mySlides19", "mySlides20", "mySlides21"
 		]
 		showSlides(1, 0);
 		showSlides(1, 1);
@@ -926,6 +946,7 @@
 		showSlides(1, 17);
 		showSlides(1, 18);
 		showSlides(1, 19);
+    showSlides(1, 20);
 
 
 
